--- a/leave.html
+++ b/leave.html
@@ -28,6 +28,31 @@
         text-shadow: 0 0 2px #0f0, 0 0 4px #0f0, 0 0 6px #0f0;
     }
 
+    #extra-message {
+        position: absolute;
+        bottom: 80px;
+        width: 100%;
+        text-align: center;
+        font-size: 20px;
+        opacity: 0;
+        transition: opacity 1.5s ease;
+        text-shadow: 0 0 2px #0f0, 0 0 4px #0f0;
+    }
+
+    #back-btn {
+        margin-top: 15px;
+        padding: 8px 20px;
+        background: #0f0;
+        color: #111;
+        border: none;
+        font-family: "Courier New", monospace;
+        cursor: pointer;
+        font-size: 18px;
+        border-radius: 4px;
+        opacity: 0;
+        transition: opacity 1.5s ease;
+    }
+
     #crtCanvas {
         position: fixed;
         top: 0;
@@ -49,6 +74,16 @@
 <body>
 
 <div id="message">Bye bye ~(‾▿‾)~</div>
+
+<div id="extra-message">
+    If this page didn't close automatically,<br>
+    it's because most browsers block auto-closing pages.
+    <br>
+    <button id="back-btn" onclick="window.location.href='index.html'">
+        Go Back
+    </button>
+</div>
+
 <canvas id="crtCanvas"></canvas>
 
 <script>
@@ -98,11 +133,23 @@ drawCRT();
 
 
 // -------------------------
-// Close window after 3 seconds
+// Try closing window after 3 seconds
 // -------------------------
 setTimeout(() => {
     window.close();
 }, 3000);
+
+
+// -------------------------
+// Show "page didn't close" message after 5 seconds
+// -------------------------
+setTimeout(() => {
+    const msg = document.getElementById("extra-message");
+    const btn = document.getElementById("back-btn");
+
+    msg.style.opacity = "1";
+    btn.style.opacity = "1";
+}, 5000);
 </script>
 
 </body>
