--- a/resume.html
+++ b/resume.html
@@ -140,7 +140,7 @@
 <script>
 function openLeave() {
     // Open leave.html *via JS* so it can close itself later
-    const newTab = window.open("leave.html", "_blank");
+    const newTab = window.open("leave.html", "_self");
 
     // Optional: close the index page after opening leave.html
     window.close();
