--- a/index.html
+++ b/index.html
@@ -262,9 +262,9 @@
 								<p>
 									<strong>LinkedIn:</strong>
 									<a
-										href="//www.linkedin.com/in/fakhrul-hilmi/"
+										href="www.linkedin.com/in/fakhrul-hilmi/"
 									>
-										//www.linkedin.com/in/fakhrul-hilmi/
+										www.linkedin.com/in/fakhrul-hilmi/
 									</a>
 								</p>
 								<p>
@@ -343,3 +343,4 @@
 		</div>
 	</body>
 </html>
+
